--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.yiyuanliu.hepan"
         minSdkVersion 19
         targetSdkVersion 23
-        versionCode 3
-        versionName '0.3.160824_beta'
+        versionCode 4
+        versionName '0.4.160905_beta'
     }
     buildTypes {
 
@@ -45,5 +45,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.instabug.library:instabug:2+'
+    compile 'org.jsoup:jsoup:1.9.2'
+    compile 'im.fir:fir-sdk:latest.integration@aar'
 }
