--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:name=".App"
@@ -17,13 +19,8 @@
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:theme="@style/AppTheme.NoActionBar"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".activity.LoginActivity"
             android:screenOrientation="portrait"
@@ -80,11 +77,21 @@
         <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name=".TestActivity" />
 
         <service android:name=".notify.HeartService" />
 
-        <activity android:name=".activity.BrownActivity"></activity>
+        <activity android:name=".activity.BrownActivity"
+            android:theme="@style/AppTheme.NoBar"></activity>
+
+        <activity android:name=".activity.SplashActivity"
+            android:theme="@style/AppTheme.NoBar.Splash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <meta-data android:value="7a50b770b12b19d76a01dc99964ab0ab" android:name="BUG_HD_SDK_GENERAL_KEY" />
     </application>
 
 </manifest>
